Fixed footer not fitting in and header as well had to change a bunch of little stuff in .main_wrapper stles.css and shop.css, removed shop button in middle of page and put one in footer area.  looks better & is more functional at this point.

--- a/css/shop.css
+++ b/css/shop.css
@@ -3,6 +3,7 @@
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
+	box-sizing: border-box;
 }
 :root {
     --primary-color: #003366;
@@ -59,17 +60,16 @@ section{
 header{
 	display: grid;
 	height: 50px;
-	max-width: 100%;
+	width: 100%;
 	margin: 0 auto;
-	grid-template-columns: 1fr auto auto;
+	grid-template-columns: 1fr auto 35px;
 	grid-auto-rows: repeat(1, minmax(80px, .4fr));
-	grid-gap: 2%;
+	grid-gap: 0;
 	text-align: center;
 	padding: 3px;
 	justify-content: center;
 	align-content: center;
-	background-color: var(--bg-primary);
-	 background-color: var(--bgkd-dark);
+	background-color: var(--bgkd-dark);
     box-shadow: 0 0 10px black;
 }
 #header_logo img{
@@ -556,28 +556,24 @@ ul ul li{
 }
 /*SIDEBAR END*/
 
-.footer{
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: repeat(4, 40px) ;
-	width: 100%;
-	height: 180px;
-	font-size: 12px;
-	color: var(--text-1);
-	background-color: #111;
-	text-align: right;
-	align-items: center;
+footer{
+  width: 100%;
 }
-.footer ul{
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr 1fr ;
-	text-align: center;
-	
+.footer ul {
+  display: flex;
+  list-style: none; /* Remove bullets */
+  padding: 0; /* Remove default padding */
+  margin: 0; /* Remove default margin */
+  float: right;
+  flex-direction: column;
+  
 }
-.footer li{
-	padding-right: 5px;
-	
+
+.footer li {
+  display: flex;
+  width: 100px;
+  margin: 0 10px; /* Horizontal spacing between items */
+  justify-self: right;
 }
 
 
